SALESFORCE_PRACTICE PROJECT/force-app/main/default/objects/Ticket__c/fields/Boarding_Gate__c.field-meta.xml
<CustomField>
    <fullName>Boarding_Gate__c</fullName>
    <label>Boarding Gate</label>
    <length>20</length>
    <type>Text</type>
</CustomField>