SALESFORCE_PRACTICE PROJECT/force-app/main/default/objects/Ticket__c/fields/Boarding_Time__c.field-meta.xml
<CustomField>
    <fullName>Boarding_Time__c</fullName>
    <label>Boarding Time</label>
    <type>Time</type>
</CustomField>